# hangman-rust

./: .gitignore  Cargo.toml  README.md  clippy.toml  words.txt
src/: constants.rs  main.rs  utils.rs
